--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,3 +1,50 @@
+/*
+Primary blue: #03a3df
+Secondary blue: #1b447f
+secondary gold: #ecb722
+secondary gray: #444444
+*/
+
 * {
   font-family: Arial, sans-serif;
+  box-sizing: border-box;
+}
+header {
+  padding: 2em;
+  background-color: #1b447f;
+  background-image: image("images/archeryAcademy-logo-color.png")
+  background-position: left;
+  background-size: auto;
+}
+nav {
+  text-align: right;
+  color: #FFFFFF;
+}
+nav > p > a {
+  color: #FFFFFF;
+  font-weight: bold;
+}
+.portal {
+  background-color: #ecb722;
+  border: 1rem solid #ecb722;
+  border-radius: 2rem;
+}
+.portal:hover {
+  background-color: #03a3df;
+  border: 1rem solid #03a3df;
+  border-radius: 2rem;
+}
+
+.header-grid {
+  display: grid;
+  grid-template-columns: 65% 35%;
+  grid-template-rows: 100%;
+}
+.header1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+.header2 {
+  grid-column: 2;
+  grid-row: 1;
 }
