--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -48,3 +48,103 @@ nav > p > a {
   grid-column: 2;
   grid-row: 1;
 }
+li {
+  list-style: none;
+  padding-bottom: 1em;
+  padding-left: 0;
+}
+
+.services-grid {
+  display: grid;
+  grid-template-columns: 65% 35%;
+  grid-template-rows: auto auto;
+  grid-gap: 1em;
+}
+.aside {
+  grid-column-start: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+.services {
+  grid-column: 1;
+  grid row: 1;
+}
+.lessons {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+footer {
+  clear: both;
+  padding: 1rem;
+  margin-top: 0;
+  background-color: #03a3df;
+}
+.footer-grid {
+  clear: both;
+  display: grid;
+  grid-template-columns: 3;
+  grid-template-rows: 1;
+}
+.footer1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+.footer2 {
+  grid-column: 2;
+  grid-row: 1;
+  align-items: center;
+}
+.footer3 {
+  grid-column: 3;
+  grid-row: 1;
+}
+aside {
+  padding: 1em;
+}
+.info {
+  background-color: #ecb722;
+  padding: 1rem;
+
+}
+.upcoming {
+  padding: 1rem;
+  border: 1rem solid #ecb722;
+  padding-top: 0.5rem;
+}
+.announcements {
+  background-color: #444444;
+  color: #ffffff;
+  padding: 1rem;
+  padding-top: 0.5rem;
+  height: 20rem;
+  overflow: auto;
+}
+article {
+  padding: 1rem;
+}
+h1 {
+  color: #03a3df;
+  text-decoration: underline;
+  text-decoration-color: #ecb722;
+  margin-top: -0.5rem;
+}
+h2 {
+  color: #1b447f;
+}
+.about-grid{
+  display: grid;
+  grid-template-columns: 65% 35%;
+  grid-template-rows: auto auto;
+  grid-gap: 1em;
+}
+.aside-about{
+  grid-column-start: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+.company {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row: 1;
+}
