--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -11,9 +11,8 @@ secondary gray: #444444
 }
 header {
   padding: 2em;
+  padding-bottom: 0;
   background-color: #1b447f;
-  background-image: image("images/archeryAcademy-logo-color.png")
-  background-position: left;
   background-size: auto;
 }
 nav {
@@ -28,30 +27,40 @@ nav > p > a {
   background-color: #ecb722;
   border: 1rem solid #ecb722;
   border-radius: 2rem;
+  text-align: right;
 }
 .portal:hover {
   background-color: #03a3df;
   border: 1rem solid #03a3df;
   border-radius: 2rem;
 }
-
 .header-grid {
   display: grid;
-  grid-template-columns: 65% 35%;
-  grid-template-rows: 100%;
+  grid-template-columns: 50% 50%;
+  grid-template-rows; min-height: 10rem;
 }
 .header1 {
   grid-column: 1;
-  grid-row: 1;
+  grid-row: 1/span 2;
 }
 .header2 {
   grid-column: 2;
   grid-row: 1;
+  text-align: right;
+}
+.header3 {
+  grid-column: 2;
+  grid-row: 2;
+  text-align: right;
 }
 li {
   list-style: none;
+  padding-top: 1em;
   padding-bottom: 1em;
-  padding-left: 0;
+  padding-left: 1em;
+  padding-right: 1em;
+  margin-left: -1em;
+  margin-right: 1em;
 }
 
 .services-grid {
@@ -77,7 +86,6 @@ li {
 footer {
   clear: both;
   padding: 1rem;
-  margin-top: 0;
   background-color: #03a3df;
 }
 .footer-grid {
@@ -98,6 +106,9 @@ footer {
 .footer3 {
   grid-column: 3;
   grid-row: 1;
+}
+h2 {
+  color: #1b447f;
 }
 aside {
   padding: 1em;
@@ -120,6 +131,9 @@ aside {
   height: 20rem;
   overflow: auto;
 }
+.announcements > h2 {
+  color: #FFFFFF;
+}
 article {
   padding: 1rem;
 }
@@ -129,13 +143,10 @@ h1 {
   text-decoration-color: #ecb722;
   margin-top: -0.5rem;
 }
-h2 {
-  color: #1b447f;
-}
 .about-grid{
   display: grid;
   grid-template-columns: 65% 35%;
-  grid-template-rows: auto auto;
+  grid-template-rows: 2;
   grid-gap: 1em;
 }
 .aside-about{
@@ -147,4 +158,15 @@ h2 {
   grid-column-start: 1;
   grid-column-end: 4;
   grid-row: 1;
+}
+
+ul.schedule>li:nth-child(even) {
+  background-color: #03a3df;
+  color: #ffffff;
+  padding-left: 1em;
+}
+ul.schedule>li:nth-child(odd) {
+  color: #03a3df;
+  padding-left: 1em;
+  border: 1px #03a3df solid;
 }
