--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -14,7 +14,7 @@ header {
   padding-bottom: 0;
   background-color: #03a3df;
   background-size: auto;
-  border-bottom: 1rem solid #1b447f;
+  border-bottom: 1em solid #1b447f;
 }
 nav {
   text-align: right;
@@ -26,16 +26,16 @@ nav > div > p > a {
 }
 .portal {
   background-color: #1b447f;
-  border: 1rem solid #1b447f;
-  border-radius: 2rem;
+  border: 1em solid #1b447f;
+  border-radius: 2em;
   text-align: right;
   color: #ffffff;
   font-weight: bold;
 }
 .portal:hover {
   background-color: #444444;
-  border: 1rem solid #444444;
-  border-radius: 2rem;
+  border: 1em solid #444444;
+  border-radius: 2em;
 }
 .header-grid {
   display: grid;
@@ -69,9 +69,9 @@ li {
   display: grid;
   grid-template-columns:7fr 3fr;
   grid-template-rows: auto auto;
-  margin-top: .5rem;
-  margin-bottom: .5rem;
-  grid-gap: .5rem;
+  margin-top: .5em;
+  margin-bottom: .5em;
+  grid-gap: .5em;
   justify-content: center;
 }
 .aside {
@@ -80,8 +80,8 @@ li {
   grid-row-end: 2;
 }
 article {
-  margin-left: 0rem;
-  padding: 1rem;
+  margin-left: 0em;
+  padding: 1em;
 }
 .white {
   color: #ffffff;
@@ -90,7 +90,7 @@ article {
   grid-column: 1;
   grid-row: 1/span 2;
   background-color: #1b447f;
-  border: .5rem solid #ecb722;
+  border: .5em solid #ecb722;
 }
 .lessons {
   grid-column: 1;
@@ -99,24 +99,24 @@ article {
 }
 .container {
   display: flex;
-  margin-right: 1rem;
+  margin-right: 1em;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
 }
 .box {
-  margin: 1rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  margin: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
   width: 90%;
   border: 3px #ecb722 solid;
-  border-radius: 2rem;
+  border-radius: 2em;
   background-color: #ffffff;
   color: #444444;
 }
 footer {
   clear: both;
-  padding: 1rem;
+  padding: 1em;
   background-image: url("https://raw.githubusercontent.com/UWFront-End-Cert/html100/master/lesson07-styleguide/styleguide%20design%20elements/footerImage.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -157,59 +157,59 @@ aside > h2 {
   text-align: center;
 }
 .info {
-  padding: 1rem;
-  border-left: .5rem solid #444444;
-  border-right: .5rem solid #444444;
-  border-top: .5rem solid #444444;
+  padding: 1em;
+  border-left: .5em solid #444444;
+  border-right: .5em solid #444444;
+  border-top: .5em solid #444444;
   background-color: #ecb722;
   font-weight: bold;
   text-align: center;
 }
 .info > p > a {
-margin-top: 2rem;
+margin-top: 2em;
   color: #ffffff;
   background-color: #1b447f;
-  border: 0.5rem solid #1b447f;
-  border-radius: 2rem;
+  border: 0.5em solid #1b447f;
+  border-radius: 2em;
 }
 .info > p > a:hover {
   background-color: #444444;
-  border: .5rem solid #444444;
-  border-radius: 2rem;
+  border: .5em solid #444444;
+  border-radius: 2em;
 }
 .upcoming {
-  padding: 1rem;
-  padding-top: 0.5rem;
-  border-left: .5rem solid #444444;
-  border-right: .5rem solid #444444;
+  padding: 1em;
+  padding-top: 0.5em;
+  border-left: .5em solid #444444;
+  border-right: .5em solid #444444;
   font-weight: bold;
   background-color: #ffffff;
 }
 .announcements {
   background-color: #444444;
   color: #ffffff;
-  padding: 1rem;
-  padding-top: 0rem;
-  margin-bottom: .5rem;
-  height: 20rem;
+  padding: 1em;
+  padding-top: 0em;
+  margin-bottom: .5em;
+  height: 20em;
   overflow: auto;
 }
 .announcements > h2 {
   color: #FFFFFF;
 }
 h1 {
-  color: #ecb722;;
+  color: #ecb722;
   text-align: center;
-  border-bottom: .25rem solid #ecb722;
+  border-bottom: .25em solid #ecb722;
 
 }
 .about-grid{
   display: grid;
   grid-template-columns:7fr 3fr;
   grid-template-rows: 1fr 1fr;
-  margin-top: .5rem;
-  grid-gap: .5rem;
-  margin-bottom: 0.5rem;
+  margin-top: .5em;
+  grid-gap: .5em;
+  margin-bottom: 0.5em;
 
 }
 .aside-about{
@@ -223,10 +223,10 @@ h1 {
     grid-column: 1;
     grid-row: 1;
     background-color: #1b447f;
-    border: .5rem solid #ecb722;
+    border: .5em solid #ecb722;
   }
 .scroll {
-  height: 25rem;
+  height: 25em;
   overflow: auto;
 }
 .staff-row {
@@ -244,8 +244,8 @@ h1 {
 width: 31%;
 background-color: #03a3df;
 color: #ffffff;
-padding: 1rem;
-padding-left: 1.5rem;
+padding: 1em;
+padding-left: 1.5em;
 }
 ul.schedule>li:nth-child(even) {
   background-color: #444444;
@@ -261,10 +261,10 @@ ul.schedule>li:nth-child(odd) {
 
 h4 {
 text-align: center;
-border-bottom: .5rem solid #444444;
-padding-bottom: .5rem;
-font-size: 1.5rem;
+border-bottom: .5em solid #444444;
+padding-bottom: .5em;
+font-size: 1.5em;
 }
 h3 {
-  border-bottom: .5rem solid #444444;
+  border-bottom: .5em solid #444444;
 }
