--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -213,10 +213,11 @@ h1 {
 .about-grid{
   display: grid;
   grid-template-columns:7fr 3fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: auto auto;
   margin-top: .5em;
   grid-gap: .5em;
   margin-bottom: 0.5em;
+  justify-content: center;
 
 }
 .aside-about{
