--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -79,6 +79,7 @@ li {
   grid-column-start: 2;
   grid-row-start: 1;
   grid-row-end: 2;
+  background-color: #444444;
 }
 article {
   margin-left: 0em;
@@ -222,7 +223,6 @@ h1 {
 }
 .aside-about{
   grid-column-start: 2;
-  grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
   background-color: #444444;
