--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -244,7 +244,7 @@ h1 {
 .container-staff {
   display: flex;
   flex-direction: row;
-  width: 93%;
+  width: 95%;
   flex-wrap: wrap;
   justify-content: space-around;
   padding-left: 1.5em;
@@ -255,6 +255,9 @@ background-color: #03a3df;
 color: #ffffff;
 padding: 1em;
 padding-left: 1.25em;
+overflow: auto;
+}
+
 }
 ul.schedule>li:nth-child(even) {
   background-color: #444444;
