--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -290,3 +290,19 @@ ul.schedule>li:nth-child(even) {
   padding-left: 1em;
   width: 90%;
 }
+.hidden {
+  position: relative;
+  left: -10000px;
+  top: auto;
+}
+.hidden:focus {
+  left: 0;
+}
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
